# chq

./: .gitignore  Makefile  README.md  config.yaml.example  pyproject.toml
deploy/: template.yaml
scripts/: run_local.py
src/chq/: __init__.py  __main__.py  cli.py  config.py  executor.py  handler.py  init_cmd.py  runner.py
src/chq/outputs/: csv_out.py  html.py  json_out.py  slack.py  terminal.py
src/chq/sql/anomalies/: new_expensive_patterns.sql  wow_duration_regressions.sql
src/chq/sql/anti_patterns/: full_scans.sql  missing_partition_filter.sql  repeated_identical.sql  select_star_wide_tables.sql  small_insert_batches.sql  unbounded_results.sql
src/chq/sql/cluster_health/: insert_duration_by_engine.sql  insert_part_fragmentation.sql  merge_pressure.sql  partition_health.sql
src/chq/sql/cost_attribution/: by_user.sql
src/chq/sql/top_n/: by_duration.sql  by_memory.sql  by_read_bytes.sql  by_weighted_cost.sql
tests/: test_outputs.py  test_sql_loader.py
tests/fixtures/: sample_results.json
